--- a/index.html
+++ b/index.html
@@ -1,5 +1,37 @@
-<!DOCTYPE HTML>
-<title>HTML</title>
+<!DOCTYPE html>
+<html>
+<title>Umut is a fucking ass hole</title>
 <h1>Why Umut is an asshole</h1>
 <b2>Umut is an asshole </b2>
-<img src="C:\Users\tgred\Desktop\GIT\HTML\warning-do-not-be-an-asshole-sign-vector-23651719.jpg">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
