--- a/index.html
+++ b/index.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
-<html>
-<title>Umut is a fucking ass hole</title>
-<h1>Why Umut is an asshole</h1>
-<b2>Umut is an asshole </b2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/Su1tz/HTML/main/imagesources/favicon.ico"
+      <meta
+      name="description"
+      content="This webpage includes information about my favorite person"
+    />
+    <title>Ezgi</title>
+  </head>
+  <body>
+    <h1>Welcome to the Ezgi Wiki</h1>
+    <p>This website is where I compile all the information on my GF</p>
+  </body>
 </html>
