--- a/index.html
+++ b/index.html
@@ -12,10 +12,24 @@
       name="description"
       content="This webpage includes information about my favorite person"
     />
+    <style>
+      body {
+        background-color: pink;
+        font-family: Tahoma, sans-serif;
+        background-image: "/imagesources/background.jpg";
+      }
+    </style>
     <title>Ezgi</title>
   </head>
   <body>
-    <h1>Welcome to the Ezgi Wiki</h1>
-    <p>This website is where I compile all the information on my GF</p>
+    <div class="firstpage">
+      <h1 style="color: #ffffff" style="font-weight: bolder">
+        Welcome to the Ezgi Wiki
+      </h1>
+      <p style="font-size: 20px">
+        This website is where I compile all the information on my GF
+      </p>
+      <hr />
+    </div>
   </body>
 </html>
